# openIMU-libserial

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/: LibSerialPort.hpp  openIMU_constants.hpp  openIMU_serial.hpp  openIMU_types.hpp
notes/: OpenIMU-335RI_RS232_packages.md
src/: CMakeLists.txt  LibSerialPort.cpp  main.cpp
tests/: CMakeLists.txt  test_libserial_port.cpp  test_main.cpp
